# NeuralTest

./: .gitignore  Array.cpp  Array.h  CMakeLists.txt  Connector.cpp  Connector.h  Display.cpp  Display.h  Neuron.cpp  Neuron.h  NeuronGrid.cpp  NeuronGrid.h  Rectangle.cpp  Rectangle.h  Utilities.cpp  Utilities.h  main.cpp
